; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-exynos/extr_exynos.c_exynos_map_pmu.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-exynos/extr_exynos.c_exynos_map_pmu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }

@exynos_dt_pmu_match = common dso_local global i32 0, align 4
@pmu_base_addr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @exynos_map_pmu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exynos_map_pmu() #0 {
  %1 = alloca %struct.device_node*, align 8
  %2 = load i32, i32* @exynos_dt_pmu_match, align 4
  %3 = call %struct.device_node* @of_find_matching_node(i32* null, i32 %2)
  store %struct.device_node* %3, %struct.device_node** %1, align 8
  %4 = load %struct.device_node*, %struct.device_node** %1, align 8
  %5 = icmp ne %struct.device_node* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load %struct.device_node*, %struct.device_node** %1, align 8
  %8 = call i32 @of_iomap(%struct.device_node* %7, i32 0)
  store i32 %8, i32* @pmu_base_addr, align 4
  br label %9

9:                                                ; preds = %6, %0
  ret void
}

declare dso_local %struct.device_node* @of_find_matching_node(i32*, i32) #1

declare dso_local i32 @of_iomap(%struct.device_node*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
